@@ -9131,7 +9131,8 @@ the corresponding filesystem path.</p></div>
 <h4 id="_host_action_icon">host_action_icon</h4>
 <div class="paragraph"><p>Change path to your host action icons. You may use
 relative paths to specify completely different location.
-You also may want to use <em>action_pnp.gif</em> when using pnp.</p></div>
+You also may want to use <em>action_pnp.png</em> when using pnp.
+Icon can be overriden by a custom variable <em>_ACTION_ICON</em>.</p></div>
 <div class="paragraph"><p>ex.:</p></div>
 <div class="literalblock">
 <div class="content">
@@ -9140,7 +9141,8 @@ You also may want to use <em>action_pnp.gif</em> when using pnp.</p></div>
 <h4 id="_service_action_icon">service_action_icon</h4>
 <div class="paragraph"><p>Change path to your service action icons. You may use
 relative paths to specify completely different location.
-You also may want to use <em>action_pnp.gif</em> when using pnp.</p></div>
+You also may want to use <em>action_pnp.png</em> when using pnp.
+Icon can be overriden by a custom variable <em>_ACTION_ICON</em>.</p></div>
 <div class="paragraph"><p>ex.:</p></div>
 <div class="literalblock">
 <div class="content">
@@ -10542,7 +10544,7 @@ You can now add the /home/thruk/var/remote.sock to your thruk_local.conf.</p></d
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2012-04-24 11:53:25 CEST
+Last updated 2012-04-24 23:11:51 CEST
 </div>
 </div>
 </body>
