@@ -29,7 +29,7 @@
 [% IF host.$host_acknowledged                %]<td align="center"><img class="notclickable" src="[% url_prefix %]thruk/themes/[% theme %]/images/ack.gif" alt="This host problem has been acknowledged" title="This host problem has been acknowledged" border="0" height="[% imgsize %]" width="[% imgsize %]"></td>[% END %]
 [% IF host_comment_count > 0                 %]<td align="center" valign="middle"><img src="[% url_prefix %]thruk/themes/[% theme %]/images/comment.gif" alt="This host has [% host_comment_count %] comment associated with it" border="0" height="[% imgsize %]" width="[% imgsize %]" class="clickable" [% info_popup_event_type %]="return overlib('<table border=0 cellpadding=3 cellspacing=0 class=\'hostcomments\' width=\'100%\'><tr><th>Entry Time</th><th>Author</th><th>Comment</th><th>Type</th></tr>[% SET hostname = host.$host_name %][% FOR com = comments_by_host.$hostname %]<tr><td nowrap valign=\'top\' align=\'right\'>[% date_format(c, com.entry_time) %]</td><td nowrap valign=\'top\'>[% com.author %]</td><td>[% IF escape_html_tags %][% escape_html(escape_html(com.comment)) %][% ELSE %][% escape_quotes(com.comment) %][% END %]</td><td nowrap valign=\'top\'>[% IF com.entry_type == 1 %]User[% ELSIF com.entry_type == 2 %]Scheduled Downtime[% ELSIF com.entry_type == 3 %]Flap Detection[% ELSIF com.entry_type == 4 %]Acknowledgement[% ELSE %]?[% END %]</td></tr>[% END %]</table>',CAPTION,'[% host.$host_name %] - Comments',WIDTH,600,[% c.config.info_popup_options %]);"></td>[% END %]
 [% IF host.$host_scheduled_downtime_depth > 0 %]<td align="center" valign="middle" class="[% IF with_status %]has_downtime[% END %]"><img src="[% url_prefix %]thruk/themes/[% theme %]/images/downtime.gif" alt="This host is currently in a period of scheduled downtime" height="[% imgsize %]" width="[% imgsize %]" class="clickable" [% info_popup_event_type %]="return overlib('<table border=0 cellpadding=3 cellspacing=0 class=\'hostdowntimes\' width=\'100%\'><tr><th>Start Time</th><th>End Time</th><th>Author</th><th>Comment</th></tr>[% SET hostname = host.$host_name %][% FOR d = downtimes_by_host.$hostname %]<tr><td nowrap valign=\'top\' align=\'right\'>[% date_format(c, d.start_time) %]</td><td nowrap valign=\'top\' align=\'right\'>[% date_format(c, d.end_time) %]</td><td nowrap valign=\'top\'>[% d.author %]</td><td>[% IF escape_html_tags %][% escape_html(escape_html(d.comment)) %][% ELSE %][% escape_quotes(d.comment) %][% END %]</td></tr>[% END %]</table>',CAPTION,'[% host.$host_name %] - Downtimes',WIDTH,600,[% c.config.info_popup_options %]);"></td>[% END %]
-[% IF host.$host_action_url_expanded          %]<td align="center" valign="middle"><a href='[% host.$host_action_url_expanded %]'[% IF c.config.cgi_cfg.action_url_target %] target='[% c.config.cgi_cfg.action_url_target %]'[% END %]><img src='[% url_prefix %]thruk/themes/[% theme %]/images/[% host_action_icon %]' border="0" width="[% imgsize %]" height="[% imgsize %]" alt='Perform Extra Host Actions' title='Perform Extra Host Actions'></a></td>[% END %]
+[% IF host.$host_action_url_expanded          %]<td align="center" valign="middle"><a href='[% host.$host_action_url_expanded %]'[% IF c.config.cgi_cfg.action_url_target %] target='[% c.config.cgi_cfg.action_url_target %]'[% END %]><img src='[% url_prefix %]thruk/themes/[% theme %]/images/[% action_icon(host, host_action_icon, hostprefix) %]' border="0" width="[% imgsize %]" height="[% imgsize %]" alt='Perform Extra Host Actions' title='Perform Extra Host Actions'></a></td>[% END %]
 [% IF host.$host_notes_url_expanded           %]<td align="center" valign="middle"><a href='[% host.$host_notes_url_expanded %]'[% IF c.config.cgi_cfg.notes_url_target %] target='[% c.config.cgi_cfg.notes_url_target %]'[% END %]><img src='[% url_prefix %]thruk/themes/[% theme %]/images/notes.gif' border="0" width="[% imgsize %]" height="[% imgsize %]" alt='View Extra Host Notes' title='View Extra Host Notes'></a></td>[% END %]
 [% IF host.$host_icon_image_expanded          %]<td align="center" valign="middle"><img class="notclickable" src='[% logo_path_prefix %][% host.$host_icon_image_expanded %]' border="0" width="[% imgsize %]" height="[% imgsize %]" alt='[% host.$host_icon_image_alt %]' title='[% host.$host_icon_image_alt %]'></td>[% END %]
 [% IF with_status && show_config_edit_buttons && backends_with_obj_config.$peer_key %]<td><a href='conf.cgi?edit&amp;host=[% host.$host_name | uri %]&amp;backend=[% host.peer_key %]'><img src='[% url_prefix %]thruk/themes/[% theme %]/images/config.png' border="0" alt='Configure This Host' title='Configure This Host' width="[% imgsize %]" height="[% imgsize %]"></a></td>[% END %]
