@@ -17,7 +17,7 @@
 [% IF service.acknowledged                 %]<td align="center"><img class="notclickable" src="[% url_prefix %]thruk/themes/[% theme %]/images/ack.gif" alt="This service problem has been acknowledged" title="This service problem has been acknowledged" border="0" height="20" width="20"></td>[% END %]
 [% IF service_comment_count > 0            %]<td align="center"><img src="[% url_prefix %]thruk/themes/[% theme %]/images/comment.gif" alt="This service has [% service_comment_count %] comment associated with it" border="0" height="20" width="20" class="clickable" [% info_popup_event_type %]="return overlib('<table border=0 cellpadding=3 cellspacing=0 class=\'servicecomments\' width=\'100%\'><tr><th>Entry Time</th><th>Author</th><th>Comment</th><th>Type</th></tr>[% SET hostname = service.host_name description = service.description %][% FOR com = comments_by_host_service.$hostname.$description %]<tr><td nowrap valign=\'top\' align=\'right\'>[% date_format(c, com.entry_time) %]</td><td nowrap valign=\'top\'>[% com.author %]</td><td>[% IF escape_html_tags %][% escape_html(escape_html(com.comment)) %][% ELSE %][% escape_quotes(com.comment) %][% END %]</td><td nowrap valign=\'top\'>[% IF com.entry_type == 1 %]User[% ELSIF com.entry_type == 2 %]Scheduled Downtime[% ELSIF com.entry_type == 3 %]Flap Detection[% ELSIF com.entry_type == 4 %]Acknowledgement[% ELSE %]?[% END %]</td></tr>[% END %]</table>',CAPTION,'[% hostname %] - [% description %] Comments',WIDTH,600,[% c.config.info_popup_options %]);"></td>[% END %]
 [% IF service.scheduled_downtime_depth > 0 %]<td class="has_downtime" align="center"><img src="[% url_prefix %]thruk/themes/[% theme %]/images/downtime.gif" alt="This service is currently in a period of scheduled downtime" border="0" height="20" width="20" class="clickable" [% info_popup_event_type %]="return overlib('<table border=0 cellpadding=3 cellspacing=0 class=\'servicedowntimes\' width=\'100%\'><tr><th>Start Time</th><th>End Time</th><th>Author</th><th>Comment</th></tr>[% SET hostname = service.host_name description = service.description %][% FOR d = downtimes_by_host_service.$hostname.$description %]<tr><td nowrap valign=\'top\' align=\'right\'>[% date_format(c, d.start_time) %]</td><td nowrap valign=\'top\' align=\'right\'>[% date_format(c, d.end_time) %]</td><td nowrap valign=\'top\'>[% d.author %]</td><td>[% IF escape_html_tags %][% escape_html(escape_html(d.comment)) %][% ELSE %][% escape_quotes(d.comment) %][% END %]</td></tr>[% END %]</table>',CAPTION,'[% hostname %] - [% description %] Downtimes',WIDTH,600,[% c.config.info_popup_options %]);"></td>[% END %]
-[% IF service.action_url_expanded          %]<td align="center" valign="middle"><a href='[% service.action_url_expanded %]'[% IF c.config.cgi_cfg.action_url_target %] target='[% c.config.cgi_cfg.action_url_target %]'[% END %]><img src='[% url_prefix %]thruk/themes/[% theme %]/images/[% service_action_icon %]' border="0" width="20" height="20" alt='Perform Extra Service Actions' title='Perform Extra Service Actions'></a></td>[% END %]
+[% IF service.action_url_expanded          %]<td align="center" valign="middle"><a href='[% service.action_url_expanded %]'[% IF c.config.cgi_cfg.action_url_target %] target='[% c.config.cgi_cfg.action_url_target %]'[% END %]><img src='[% url_prefix %]thruk/themes/[% theme %]/images/[% action_icon(service, service_action_icon) %]' border="0" width="20" height="20" alt='Perform Extra Service Actions' title='Perform Extra Service Actions'></a></td>[% END %]
 [% IF service.notes_url_expanded           %]<td align="center" valign="middle"><a href='[% service.notes_url_expanded %]'[% IF c.config.cgi_cfg.notes_url_target %] target='[% c.config.cgi_cfg.notes_url_target %]'[% END %]><img src='[% url_prefix %]thruk/themes/[% theme %]/images/notes.gif' border="0" width="20" height="20" alt='View Extra Service Notes' title='View Extra Service Notes'></a></td>[% END %]
 [% IF service.icon_image_expanded          %]<td align="center" valign="middle"><img class="notclickable" src='[% logo_path_prefix %][% service.icon_image_expanded %]' border="0" width="20" height="20" alt='[% service.icon_image_alt %]' title='[% service.icon_image_alt %]'></td>[% END %]
 [% IF show_config_edit_buttons  && backends_with_obj_config.$peer_key %]<td align="center" valign="middle"><a href='conf.cgi?edit&amp;host=[% service.host_name | uri %]&amp;service=[% service.description | uri %]&amp;backend=[% service.peer_key %]'><img src='[% url_prefix %]thruk/themes/[% theme %]/images/config.png' border="0" alt='Configure This Service' title='Configure This Service' width="20" height="20"></a></td>[% END %]
