@@ -34,6 +34,7 @@ url_prefix = /
 # change path to your host / service action icons. You may use relative paths
 # to specify completely different location.
 # you also may want to use 'action_pnp.png' when using pnp.
+# icon can be overriden by a custom variable '_ACTION_ICON'.
 #host_action_icon    = action.gif
 #service_action_icon = action.gif
 
